<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.EditScenarioActivity"
    android:orientation="vertical">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/headerTR">

        <Space
            android:layout_width="120dp"
            android:layout_height="20dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/winnerTR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/winner"
            android:layout_column="0" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/leastDeathsTR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/leastDeaths"
            android:layout_column="0" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mostCoinsTR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/mostCoins"
            android:layout_column="0" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rewardTR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/reward"
            android:layout_column="0" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/titleTR">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/title"
            android:layout_column="0" />

    </TableRow>
</TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_weight="1" />

        <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
